--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "BlackNotes",
+  "name": "BlackNotes - Twitter account note",
   "description": "Note the reason for blocking a Twitter user",
   "version": "1.0.2",
   "manifest_version": 3,
