--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,34 @@
 {
-  "name": "BlackNotes - Twitter account note",
+  "name": "BlockNotes",
   "description": "Note the reason for blocking a Twitter user",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "tabs"],
+  "host_permissions":["https://twitter.com/*"],
+  "content_scripts":[
+    {
+      "matches": ["https://twitter.com/*"],
+      "js": ["contentScript.js"]
+    }
+  ],
+  "web_accessible_resources":[
+    {
+      "resources": [
+        "assets/bookmark.png",
+        "assets/play.png",
+        "assets/delete.png",
+        "assets/save.png"
+      ],
+      "matches": ["https://twitter.com/*"]
+    }
+  ],
+  
   "action": {
     "default_popup": "popup.html",
+    "default_title": "BlockNotes",
     "default_icon": {
       "16": "/assets/icons/BlackNotes - 16px.png",
       "32": "/assets/icons/BlackNotes - 32px.png",
